<resources>
    <string name="app_name">viewsandwidets</string>
    <string name="signup_here">Signup here</string>
    <string name="fill_details">Fill all detail correctly..</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="something_about_yourself">Write Something About Yourself</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>