<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <!--
        xmlns:android="http://schemas.android.com/apk/res/android" this is called name space declaration
    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_signup"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/signup_here"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/fill_details" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/edittextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_imput_text_field_background"
                    android:ems="10"
                    android:inputType="text"
                    android:padding="12dp" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/edittextemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_imput_text_field_background"
                    android:ems="10"
                    android:inputType="text"
                    android:padding="12dp" />

                <TextView
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/edittextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_imput_text_field_background"
                    android:ems="10"
                    android:inputType="text"
                    android:padding="12dp" />

                <TextView
                    android:id="@+id/writesomething"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/something_about_yourself" />

                <EditText
                    android:id="@+id/edittextWriteSometing"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_imput_text_field_background"
                    android:inputType="textImeMultiLine"
                    android:maxLines="4"
                    android:padding="12dp" />

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Gender" />

                <RadioGroup
                    android:id="@+id/radioGrp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Male" />

                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Female" />


                </RadioGroup>

                <TextView
                    android:id="@+id/interstedCourse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Interested Courses" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBoxJava"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Java" />

                    <CheckBox
                        android:id="@+id/checkBoxPython"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Python" />

                    <CheckBox
                        android:id="@+id/checkBoxAndroid"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Android" />
                </LinearLayout>

                <TextView
                    android:id="@+id/selectDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Select DOB" />

                <Button
                    android:id="@+id/btnDatePicker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="Select Date" />

                <TextView
                    android:id="@+id/selectCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Select Country" />

                <Spinner
                    android:id="@+id/countrySelector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnSignup"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="Signup" />

                    <Button
                        android:id="@+id/btnClear"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:text="Clear" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>